Corrected placement of the navigation collapse button on small media devices.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -815,7 +815,7 @@ blockquote small:before {
 blockquote.pull-right {
     float: right;
     padding-right: 15px;
-    padding-left: 0;
+    padding-left: 5px;
     border-right: 5px solid #eee;
     border-left: 0
 }
@@ -5730,7 +5730,7 @@ a.badge:hover {
 }
 
 .pull-right {
-    float: right
+    float: right;
 }
 
 .pull-left {
@@ -5837,7 +5837,7 @@ strong {
 @media (min-width: 992px) and (max-width: 1200px) {
   header.main {
       background: #03424c;
-      padding: 10px 0;
+      padding: 10px;
       font-family: 'Lato', sans-serif;
   }
 
@@ -5894,8 +5894,8 @@ strong {
   }
 
   .nav-coll .btn-nav-coll {
-      padding: 7px 9px;
-      margin: 2px 0 0;
+      padding: 7px 5px;
+      margin: 2px 20px 0;
       background: #055f6d;
       height: 40px;
       border: 0
@@ -5928,8 +5928,8 @@ strong {
   }
 
   .nav-coll .btn-nav-coll {
-      padding: 7px 9px;
-      margin: 2px 0 0;
+      padding: 7px 5px;
+      margin: 2px 6px 0;
       background: #055f6d;
       height: 40px;
       border: 0;
@@ -5960,7 +5960,7 @@ strong {
 
   .nav-coll .btn-nav-coll {
       padding: 7px 9px;
-      margin: 2px 0 0;
+      margin: 2px 7px 0;
       background: #055f6d;
       height: 40px;
       border: 0;
